<resources>
    <string name="app_name">Fitcru-Coach</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment">Appointment</string>
    <string name="plans">Plans</string>
    <string name="habit">Habits</string>
    <string name="chat">Chat</string>
    <string name="p">P</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="prateek_kumar">Prateek Kumar</string>
    <string name="date">Date</string>
    <string name="app_time">App. Time</string>
    <string name="_12_dec_2022">12 Dec 2022</string>
    <string name="_5_00_am">5.00 AM</string>
    <string name="_1">1</string>
    <string name="add_new_appointment">Add New Appointment</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="save">Save</string>
    <string name="name_of_client">Name Of Client</string>
    <string name="add_name">Add Name</string>
    <string name="add_date">Add Date</string>
    <string name="add_time">Add Time</string>
    <string name="_12_00">12:00</string>
    <string name="add_note">Add Note</string>
    <string name="enter_your_note">Enter Your Note</string>
    <string name="select_date">Select Date</string>
    <string name="select_time_for_appointment">Select Time For Appointment</string>
    <string name="select_time">Select Time</string>
    <string name="schedule_availability">Mark Unavailability</string>
    <string name="schedule_availability1">Mark Availability</string>
    <string name="month">Month</string>
    <string name="october">October</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="select_working_hours">Select working hours</string>
    <string name="end_time">End Time</string>
    <string name="lunch">Lunch</string>
    <string name="tea_break">Tea Break</string>
    <string name="start_time">Start Time</string>
    <string name="save_availability">Save Unavailability</string>
    <string name="join">Join</string>
    <string name="expire">Expire</string>
    <string name="edit_plan">Edit Plan</string>
    <string-array name="workout">
        <item>Weight</item>
        <item>Body fat percentage</item>
        <item>Metabolic score</item>
        <item>Waist measurement</item>
        <item>Hip measurement</item>
        <item>Chest measurement</item>
        <item>Arms measurement</item>
    </string-array>
    <string name="workout1">Workout (kcal)</string>
    <string name="diet">Diet</string>
    <string name="_1000_2500">1000/2500</string>
    <string name="kcal_burnt">Kcal burnt</string>
    <string name="water">Water (Ltrs)</string>
    <string name="_3_5">3/5</string>
    <string name="liters">liters</string>
    <string name="steps">Steps</string>
    <string name="_2000_10000">0/0</string>
    <string name="pending">Pending</string>
    <string name="cardio_workout">Cardio Workout</string>
    <string name="paul_grand">Paul Grand</string>
    <string name="_1hr">1hr</string>
    <string name="edit">Edit</string>
    <string name="select_workout">Select Workout</string>
    <string name="full_body">Full Body</string>
    <string name="_200_sessions">200 + Sessions</string>
    <string name="select_meal">Select Meal</string>
    <string name="peanut_butter_toast">Peanut Butter Toast</string>
    <string name="selected">Selected</string>
    <string name="select_clients">Select Clients</string>
    <string name="home_workout">Home Workout</string>
    <string name="_185_sessions">185 Sessions</string>
    <string name="_1_hr_30_min">1 Hr 30 Min</string>
    <string name="s_amp_c_lower_body"><![CDATA[S&C Lower Body]]></string>
    <string name="intermediate">Intermediate</string>
    <string name="select">Select</string>
    <string name="okay_will_you_join">Okay, will you join?</string>
    <string name="_12">12</string>
    <string name="my_certifications">My Certifications</string>
    <string name="help_support">Help support</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="deactivate">Deactivate Account</string>
    <string name="first_name">First Name</string>
    <string name="first_name1">Name</string>
    <string name="mobile">Mobile</string>
    <string name="_91">91</string>
    <string name="_8536954288">8536954288</string>
    <string name="email">Email</string>
    <string name="prashant_gmail_com">prashant@gmail.com</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_17_08_1985">17 / 08 / 1985</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="issuing_organization">Issuing organization</string>
    <string name="ex_ncsf">Ex: NCSF</string>
    <string name="name_of_certificate">Name Of Certificate</string>
    <string name="name">Name</string>
    <string name="certificates">Certificates</string>
    <string name="certified_ncsf">Certified NCSF</string>
    <string name="my_clients">My Clients</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="_15_days_left">15 Days Left</string>
    <string name="clients">Clients</string>
    <string name="programs">Programs</string>
    <string name="status">Status</string>
    <string name="complete">Complete</string>
    <string name="edit_goals">Edit Goals</string>
    <string name="short_goals">Short Goals</string>
    <string name="short_goals1">Short Goal</string>
    <string name="long_goals">Long Goals</string>
    <string name="carbs">Carbs</string>
    <string name="_200_g">200 %</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="_500_kcal">500 Kcal</string>
    <string name="text_goal">Create Custom Text Goal</string>
    <string name="_5_ltrs">5 Ltrs</string>
    <string name="_20000">20000</string>
    <string name="_2">2</string>
    <string name="_3_months">3 Months</string>
    <string name="nutrition">Nutrition</string>
    <string name="goal">Goal</string>
    <string name="leftpercent">35 % left</string>
    <string name="weight">Weight</string>
    <string name="weighvalue">64.6 Kgs</string>
    <string name="waist">Waist</string>
    <string name="waistvalue">32 Inch</string>
    <string name="body_fat">Body Fat %</string>
    <string name="fat_value">21 %</string>
    <string name="location">Location</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_">Login</string>
    <string name="continue_">Continue</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="by_continuing_forward_you_agree_to_fitcru_s_privacy_policy_and_terms_and_condition"><font color='#666666'>By continuing  forward, you agree to Fitcru\'s</font> \n<font color='#FFFFFF'>Privacy Policy</font> <font color='#666666'>and</font> <font color='#FFFFFF'> Terms and Condition</font></string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="bio_data">Bio Data</string>
    <string name="biodata">Biodata</string>
    <string name="aadhar_card_passport_no">Aadhaar Card/Passport No</string>
    <string name="enter_aadhar_card_passport_no">Enter Aadhaar or Passport No</string>
    <string name="coach_instagram_link">Coach Instagram Link</string>
    <string name="link">Link</string>
    <string name="overall_no_of_slots">Overall No. Of Slots</string>
    <string name="_3">3</string>
    <string name="_31">0</string>
    <string name="aadhar_passport_front_image">Aadhaar Card/Passport Front Image</string>
    <string name="aadhar_passport_back_image">Aadhaar Card/Passport Back Image</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>
    <string name="specialization">Specialization</string>
    <string name="select_specialization">Select Specialization</string>
    <string name="select_gym_association">Select Gym Association</string>
    <string name="gym_association">Gym Association</string>
    <string name="qualification">Qualification</string>
    <string name="update_password">Update Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mark_unavailable_for_today">Mark Unavailable</string>
    <string name="select_month_day">Select Month/Day</string>
    <string name="description">Description</string>
    <string name="issue_organization">Issuing Organizations</string>
    <string name="mealtypebreakfast">BreakFast</string>
    <string name="mealbenefit">Benefit</string>
    <string name="choose_any_one_goal">Choose any one goal and date</string>
    <string name="target_date">Target Date</string>
    <string name="target_value">Target Value</string>
    <string name="where_are_you_based_out_of_city_and_country">Where are you based out of? City and country?</string>
    <string name="married_or_single">Married or Single ?\n(Knowing if your client is married or single will help you understand the level of responsibility shared with your client and the way food is made at home)</string>
    <string name="what_is_your_daily_routine_like_from_the_time_you_wake_up_till_the_time_you_sleep">What is your daily routine like, from the time you wake up till the time you sleep?</string>
    <string name="do_you_want_me_to_edit_the_meal_timings_as_you_have_mentioned">Do you want me to edit the meal timings as you have mentioned?</string>
    <string name="note">Notes</string>
    <string name="note1">Note</string>
    <string name="notes">Notes</string>
    <string name="stage_of_the_client">Stage of the client</string>
    <string name="workout_program">Workout Program</string>
    <string name="short_goal_set_time_duration">Short Goal - set time duration</string>
    <string name="long_goal_set_time_duration">Long Goal - set time duration</string>
    <string name="suggestion">Suggestion</string>
    <string name="nutritional_daily_goals">Nutritional Daily goals</string>
    <string name="calories">Calories</string>
    <string name="please_enter_certificate_name">Please Enter Certificate Name</string>
    <string name="please_enter_description">Please Enter Certificate Description</string>
    <string name="what_is_the_reason_that_you_want_to_sign_up_for_1_1_coaching">What is the reason that you want to sign up for 1-1 coaching?</string>
    <string name="as_a_part_of_our_coaching_process_we_really_believe_in_finding_out_the_true_reason_for_a_change_please_be_honest_with_us_we_will_not_share_this_with_anyone_but_help_you_stay_motivated_to_this_reason">As a part of our coaching process, we really believe in finding out the true reason for a change. Please be honest with us. We will not share this with anyone, but help you stay motivated to this reason.</string>
</resources>