<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_95"
        tools:context=".fragments.EPSpecializationFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/item_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/select_language"
                        android:textColor="@color/grey_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/language_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/edit_profile_edit_text_bg"
                        android:fontFamily="@font/manrope_medium"
                        android:gravity="fill"
                        android:hint="@string/language"
                        android:minHeight="60dp"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/grey_10"
                        android:textColorHint="@color/grey_10"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/select_specialization"
                        android:textColor="@color/grey_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/specialization_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/edit_profile_edit_text_bg"
                        android:fontFamily="@font/manrope_medium"
                        android:gravity="fill"
                        android:hint="@string/specialization"
                        android:minHeight="60dp"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/grey_10"
                        android:textColorHint="@color/grey_10"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/select_gym_association"
                        android:textColor="@color/grey_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/gym_association_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/edit_profile_edit_text_bg"
                        android:fontFamily="@font/manrope_medium"
                        android:gravity="fill"
                        android:hint="@string/gym_association"
                        android:minHeight="60dp"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/grey_10"
                        android:textColorHint="@color/grey_10"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/qualification"
                        android:textColor="@color/grey_text"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/qualification_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/edit_profile_edit_text_bg"
                        android:fontFamily="@font/manrope_medium"
                        android:hint="@string/qualification"
                        android:inputType="textMultiLine|text"
                        android:minHeight="60dp"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/grey_10"
                        android:textColorHint="@color/grey_10"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/save_btn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="16dp"
                        android:background="@drawable/round_background_gradient"
                        android:fontFamily="@font/notosans_bold"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>