<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_95"
        tools:context=".fragments.ForgotPasswordFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/proceed_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/back_btn_circular_background"
                    android:src="@drawable/back_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/signText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/notosans_extrabold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/notosans_regular"
                    android:padding="5dp"
                    android:text="@string/enter_the_email_address_associated_with_your_account"
                    android:textColor="@color/grey_60"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/notosans_bold"
                    android:hint="@string/enter_email_id"
                    android:inputType="text"

                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="#434141"
                    android:textSize="22sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_background_gradient"
            android:fontFamily="@font/notosans_bold"
            android:gravity="center"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>